--- a/views/programsAndEvents.ejs
+++ b/views/programsAndEvents.ejs
@@ -15,11 +15,11 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-lg-5" id="descriptive">
                             <div class="contents d-flex flex-column justify-content-around">
-                                <h5 class="mb-4" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">Programs that bring smile on someones face!</h5>
+                                <h5 class="mb-4 font-weight-bold style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: rgb(38, 26, 70);">Programs that bring smile on someones face!</h5>
                                 <h1 class="mb-4 mt-2 font-weight-bold" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">
                                     Mothers are now being HERO for thieir daughters....
                                 </h1>
-                                <h5 class="mb-4 mt-1 font-weight-normal" style="color: rgb(38, 26, 70);">
+                                <h5 class="mb-4 mt-1 font-weight-bold" style="color: rgb(38, 26, 70);">
                                     Indian Government, many companies and NGO's provides many programs and schemes for Indian womens who wish to make themself financially self sufficient....<br><br>scroll down and find such for you!
                                 </h5>
                             </div>
@@ -42,11 +42,11 @@
                         </div>
                         <div class="col-lg-5" id="descriptive">
                             <div class="contents d-flex flex-column justify-content-around">
-                                <h5 class="mb-4" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">What business are you?</h5>
+                                <h5 class="mb-4 font-weight-bold" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: rgb(38, 26, 70);">What business are you?</h5>
                                 <h1 class="mb-4 mt-2 font-weight-bold" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">
                                     Main hero message to sell yourself
                                 </h1>
-                                <h5 class="mb-4 mt-1 font-weight-normal" style="color: rgb(134, 134, 134);">
+                                <h5 class="mb-4 mt-1 font-weight-bold" style="color: rgb(38, 26, 70);">
                                     Sub hero message lead. How would you benefit the customer. Short and crisp.
                                 </h5>
                             </div>
@@ -59,11 +59,11 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-lg-5" id="descriptive">
                             <div class="contents d-flex flex-column justify-content-around">
-                                <h5 class="mb-4" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">What business are you?</h5>
+                                <h5 class="mb-4 font-weight-bold" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: rgb(38, 26, 70);">What business are you?</h5>
                                 <h1 class="mb-4 mt-2 font-weight-bold" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">
                                     Main hero message to sell yourself
                                 </h1>
-                                <h5 class="mb-4 mt-1 font-weight-normal" style="color: rgb(134, 134, 134);">
+                                <h5 class="mb-4 mt-1 font-weight-bold" style="color: rgb(38, 26, 70);">
                                     Sub hero message lead. How would you benefit the customer. Short and crisp.
                                 </h5>
                             </div>
