--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
                         <h1 class="mb-4 mt-2 font-weight-bold" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">
                             AatmaNiti is the right place to start for it!
                         </h1>
-                        <h5 class="mb-4 mt-1 font-weight-bold" style="color: #281436;">
+                        <h5 class="mb-4 mt-1" style="color: #281436;">
                             This is a place where you can find a job, sell your products and even display your business or GruhaUdyog Card!
                             <br><br> One can find a employee to do any find of job, sell their handmade crafts, cloths,eatables and what not!
                         </h5>
@@ -121,13 +121,15 @@
     </section>
 
     <section class="section-content-block">
-        <div class="row margin-bottom-11" id="vision">
+        <div class="container">
+        <div class="row justify-content-around align-items-center" id="vision">
             <div class="text-center">
                 <h2 class="mb-4"><strong>Our Vision</strong></h2>
                 <p>A world where every woman is able to use her voice, make her own decisions, and engage in economic opportunities.
                 </p>
             </div>
         </div>
+    </div>
     </section>
 
     <section class="section-content-block">
