--- a/views/jobs.ejs
+++ b/views/jobs.ejs
@@ -13,7 +13,8 @@
                         Apply for jobs on Aatmaniti and forge a better path for yourself.
                     </h5>
                     <div class="mt-1">
-                        <button type="button" class="btn mb-2 btn-primary"><a href="#scroll-target">Find a job</a></button>
+                        <!--<button type="button" class="btn mb-2 btn-primary"><a href="">Find a job</a></button>-->
+                        <a type="button" class="btn mb-2 ml-4 btn-primary" href="#scroll-target">Find a Job</a>
                     </div>
                 </div>
             </div>
