--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/header') %>
 
     <link rel="stylesheet" href="/stylesheets/loginStyle.css">
-    <section class="bg-white h-100" style="padding-top: 5rem;">
+    <section class="h-100" style="padding-top: 5rem;">
         <div class="container py-5">
             <div class="row">
                 <div class="order-lg-2 mb-3 mb-lg-0 col-lg-6 w-50 mx-auto">
