--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/header') %>
     <link rel="stylesheet" type="text/css" href="/stylesheets/user.css"></link>
 
-    <h1 style="margin-top:50px">Here goes the User Profile</h1>
+    <h1 style="margin-top:50px; color:black;font-weight:bold;">AatmaNiti's Members</h1>
 
     <div class="main">
         <ul class="cards">
